# data-rooms

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  config.py  connect_db.py  db.py  main.py  pyproject.toml  requirements.txt  seed.py  test_import.py
backend/migrations/: env.py
backend/migrations/versions/: 00a5daaa1748_init.py  10b34dfa36d3_apply_constraints.py  6af15a99da5f_update_data_room.py  aaee919a1085_init.py
backend/src/: logger.py  schemas.py
backend/src/database/: db.py  models.py
backend/src/repository/: data_rooms.py  files.py  folders.py
backend/src/routes/: data_rooms.py  files.py  folders.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DataRooms.tsx
frontend/src/components/DataRoom/: DataRoom.tsx  utils.tsx
frontend/src/components/DataRoom/Content/: Content.tsx  FileCard.tsx  FileUploadDropzone.tsx  PreviewFolderFiles.tsx  utils.tsx
frontend/src/components/DataRoom/SideBar/: AddFolder.tsx  Node.tsx  SideBar.tsx  treeDataReducer.ts
frontend/src/components/ui/: button.tsx
frontend/src/pages/: DataRooms.tsx
frontend/src/pages/DataRoom/: DataRoom.tsx  index.tsx  utils.tsx
frontend/src/pages/DataRoom/Content/: Content.tsx
frontend/src/pages/DataRoom/SideBar/: DeleteEntity.tsx  RenameEntity.tsx  SideBar.tsx  treeDataReducer.ts  utils.tsx
frontend/src/pages/DataRoom/SideBar/utils/: utils.test.ts
frontend/src/pages/DataRoom/utils/: utils.test.ts  utils.tsx
frontend/src/types/: index.ts
