[tool.poetry]
name = "dataroom"
version = "0.1.0"
description = ""
authors = ["Artem <artem.zimovets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.17.0"
fastapi = "^0.119.0"
uvicorn = "^0.37.0"
sqlalchemy = "^2.0.44"
psycopg2 = "^2.9.11"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
